--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://hugo-toha.github.io
 
-languageCode: en-us
+languageCode: es-es
 title: "John's Blog"
 theme: "toha"
 
@@ -10,12 +10,12 @@ languages:
   en:
     languageName: English
     weight: 1
-  bn:
-    languageName: বাংলা
-    weight: 3
+  es:
+    languageName: Spanish
+    weight: 2
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
-# DefaultContentLanguage: bn
+DefaultContentLanguage: es
 
 # Allow raw html in markdown file
 markup:
