Change header's name

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://hugo-toha.github.io
 
 languageCode: es-es
-title: "John's Blog"
+title: "Rubén Gómez"
 theme: "toha"
 
 # Manage languages
